# myai

./: .cursorrules  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  AI_CONFIGURATION_ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  agent-os-global  pyproject.toml  sonar-project.properties
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.claude/: settings.json
.claude/agents/: a_player_leader.md  bi_developer.md  brand_strategist.md  chief_financial_officer.md  chief_security_officer.md  content_creator.md  contract_specialist.md  customer_success_manager.md  customer_support_specialist.md  data_analyst.md  devops_engineer.md  engineering_team_leader.md  executive-leader.md  finance_specialist.md  finance_team_leader.md  lead_developer.md  legal_team_leader.md  marketing_team_leader.md  my-custom-agent.md  my-global-agent.md  quality_assurance_engineer.md  security_analyst.md  security_team_leader.md  senior_legal_advisor.md  systems_architect.md
.claude/hooks/: notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
.gitlab/: abstract.yml  merge_request.yml
.gitlab/merge_request_templates/: mr_template.md
.myagents/agents/: brand_strategist.md  data_analyst.md  lead_developer.md  security_team_leader.md
.myagents/teams/engineering/: config.json
.myagents/teams/finance/: config.json
.myagents/teams/legal/: config.json
.myai/: agents-md-registry.json
agent_os/: agent_os_integration.md
agent_os/standards/: collaboration_protocols.md  communication_standards.md  decision_frameworks.md
agent_os/workflows/: engineering_workflows.md  finance_workflows.md  legal_workflows.md  marketing_workflows.md  security_workflows.md
agents/engineering/: devops_engineer.md
agents/finance/: chief_financial_officer.md  finance_specialist.md
agents/legal/: contract_specialist.md  senior_legal_advisor.md
agents/marketing/: marketing_team_leader.md
specs/: README.md  Tasks.md  agent-management.md  agent-os-integration.md  agents-md-integration.md  architecture.md  cli-interface.md  configuration-management.md  installation-setup.md  overview.md  security.md  tool-integrations.md  user-guide.md
src/myai/: __main__.py  app.py  cli.py  settings.py
src/myai/agent/: __init__.py  manager.py  registry.py  templates.py  validator.py  wrapper.py
src/myai/agent_os/: __init__.py  adapter.py  transformer.py
src/myai/agents_md/: __init__.py  manager.py  templates.py
src/myai/cli/: __init__.py  first_run.py  formatters.py  interactive.py  state.py
src/myai/commands/: agent_cli.py  config_cli.py  install_cli.py  integration_cli.py  setup_cli.py  system_cli.py  uninstall_cli.py  wizard_cli.py
src/myai/config/: __init__.py  env_parser.py  hierarchy.py  interactive_resolver.py  manager.py  merger.py  watcher.py
src/myai/data/: config_template.json
src/myai/data/agents/default/business/: bi_developer.md  chief_financial_officer.md  finance_team_leader.md
src/myai/data/agents/default/engineering/: agentos-project-manager.md  agentos-spec-creator.md  agentos-workflow-executor.md  code_reviewer.md  devops_engineer.md  documentation_expert.md  engineering_team_leader.md  lead_developer.md  (+3 more)
src/myai/data/hooks/: notification.py  post_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
src/myai/data/teams/leadership/: config.json
src/myai/data/teams/marketing/: config.json
src/myai/data/teams/security/: config.json
src/myai/enterprise/: __init__.py  analytics.py  central_manager.py  license_manager.py  policy_engine.py
src/myai/integrations/: __init__.py  agentos.py  base.py  claude.py  claude_sdk.py  content_transformer.py  cursor.py  custom_agents.py  factory.py  manager.py  path_translator.py
src/myai/models/: __init__.py  agent.py  agents_md.py  config.py  path.py
src/myai/performance/: __init__.py  cache_manager.py  optimizer.py  profiler.py
src/myai/security/: __init__.py  audit.py  credentials.py  permissions.py  validation.py
src/myai/storage/: __init__.py  agent.py  base.py  config.py  filesystem.py
src/myai/sync/: __init__.py  auto_sync.py  conflict_resolver.py  file_watcher.py  sync_scheduler.py
src/myai/utils/: content_manager.py  json_content_manager.py
team_dynamics/: escalation_paths.md  inter_team_protocols.md  knowledge_sharing.md
tests/enterprise/: __init__.py  test_analytics.py  test_central_manager.py  test_license_manager.py  test_policy_engine.py
tests/integration/: test_agentos_integration.py  test_integrations.py
tests/myai/: test_app.py  test_cli.py  test_cli_options.py  test_main.py  test_settings.py
tests/myai/agent/: __init__.py  test_manager.py  test_registry.py  test_templates.py  test_validator.py
tests/myai/cli/: test_first_run.py  test_first_run_integration.py  test_formatters.py  test_interactive.py  test_state.py  test_vertical_formatter.py
tests/myai/commands/: test_agent_cli.py  test_agent_test_activation.py  test_full_install_integration.py  test_full_setup_integration.py  test_install_cli.py  test_install_integration.py  test_setup_cli.py  test_setup_integration.py
tests/myai/config/: __init__.py  test_env_parser.py  test_hierarchy.py  test_interactive_resolver.py  test_manager.py  test_merger.py  test_watcher.py
tests/myai/models/: __init__.py  test_agent.py  test_config.py  test_path.py
tests/myai/security/: __init__.py  test_audit.py  test_credentials.py  test_permissions.py  test_validation.py
tests/myai/storage/: __init__.py  test_agent.py  test_config.py  test_filesystem.py
tests/myai/utils/: test_json_content_manager.py
tests/performance/: __init__.py  test_cache_manager.py
tests/sync/: __init__.py  test_auto_sync.py  test_conflict_resolver.py
tests/unit/: test_claude_sdk_integration.py  test_custom_agent_functionality.py
(+12 files in other folders)
